# ChangeLog for app-text/poppler
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.281 2011/04/03 18:27:45 dilfridge Exp $

  03 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -poppler-0.14.4.ebuild:
  Cleanup

*poppler-0.16.3 (28 Feb 2011)

  28 Feb 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -poppler-0.16.2.ebuild, +poppler-0.16.3.ebuild:
  Version bump, remove old

  19 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> poppler-0.14.5.ebuild:
  ppc64 stable wrt #349887

*poppler-0.16.2 (30 Jan 2011)

  30 Jan 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -poppler-0.16.1.ebuild, +poppler-0.16.2.ebuild:
  Version bump, remove old

*poppler-0.16.1 (27 Jan 2011)

  27 Jan 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -poppler-0.16.0.ebuild, +poppler-0.16.1.ebuild:
  Version bump, remove old

  21 Jan 2011; Jeroen Roovers <jer@gentoo.org> poppler-0.14.5.ebuild:
  Stable for HPPA (bug #349887).

  15 Jan 2011; Brent Baude <ranger@gentoo.org> poppler-0.14.5.ebuild:
  stable ppc, bug 349887

  08 Jan 2011; Raúl Porcel <armin76@gentoo.org> poppler-0.14.5.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #349887

  08 Jan 2011; Markus Meier <maekke@gentoo.org> poppler-0.14.5.ebuild:
  arm stable, bug #349887

  04 Jan 2011; Markos Chandras <hwoarang@gentoo.org> poppler-0.14.5.ebuild:
  Stable on amd64 wrt bug #349887

  03 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  poppler-0.14.5.ebuild:
  x86 stable wrt bug #349887

  28 Dec 2010; Maciej Mrozowski <reavertm@gentoo.org> poppler-0.16.0.ebuild:
  Raise cairo dependencies to 1.10.0, bug 349917.

*poppler-0.16.0 (27 Dec 2010)

  27 Dec 2010; Maciej Mrozowski <reavertm@gentoo.org>
  +poppler-0.16.0.ebuild, metadata.xml:
  Version bump 0.16.0. Update metadata.xml, add myself as a maintainer.

*poppler-0.14.5 (07 Nov 2010)

  07 Nov 2010; Maciej Mrozowski <reavertm@gentoo.org>
  -poppler-0.14.1.ebuild, +poppler-0.14.5.ebuild: