@@ -1,6 +1,15 @@
 # ChangeLog for app-text/poppler
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.281 2011/04/03 18:27:45 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.282 2011/04/14 19:13:00 dilfridge Exp $
+
+*poppler-0.16.3-r1 (14 Apr 2011)
+*poppler-0.14.5-r1 (14 Apr 2011)
+
+  14 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  +poppler-0.14.5-r1.ebuild, -poppler-0.16.3.ebuild,
+  +poppler-0.16.3-r1.ebuild:
+  Disable abiword backend (not supported anymore, security issues, bug
+  308017)
 
   03 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
   -poppler-0.14.4.ebuild:
